--- a/Modulo01HTML5/Desafios/Desafio12/estilo/slyle.css
+++ b/Modulo01HTML5/Desafios/Desafio12/estilo/slyle.css
@@ -24,7 +24,7 @@ html, body {
 }
 
 header {
-    background-color:  black;
+    background-image: url('../');
     color: white;
     text-align: center;
 
