--- a/Modulo_04/Exercicios/Ex026/mq002/estilo/paisagem.css
+++ b/Modulo_04/Exercicios/Ex026/mq002/estilo/paisagem.css
@@ -3,5 +3,6 @@
 /* APARELHO DEITADO (landscape*/
 
 body {
-    background-color: orange;
+    background-image: url(../imagens/1920.jpg);
+    background-position: left top;
 }
