--- a/Modulo_04/Exercicios/Ex026/mq002/estilo/retrato.css
+++ b/Modulo_04/Exercicios/Ex026/mq002/estilo/retrato.css
@@ -3,5 +3,6 @@
 /* APARELHO EM PÉ (Portrait)*/
 
 body {
-    background-color: brown;
+    background-image: url(../imagens/1080.jpg);
+    background-position: center bottom;
 }
